Add Databricks-style augmented TPC-DI batches (#67)
* Update OpenIVM and Spark pins

* Pin merged OpenIVM Spark main

* Add extended SF100 insertion sweep

* Retry Fabric token after managed identity login

* Fix percentage-keyed cloud source caches

* Make cloud cache test self-contained

* Retry transient Fabric managed identity login failures

* Coordinate Fabric cache retries

* Pin ordered window OpenIVM revisions

* Add accumulated daily TPC-DI batches

* Target active DIGen batch property

* Use valid TPC-DI scale in augmented smoke test

* Record generated source row counts

* Generate Databricks-style daily TPC-DI updates

* Add SF10 augmented GCI sweep

* Continue benchmarks after engine failures

* Preserve TPC-DI deactivation events

* Match augmented TPC-DI source semantics

* Fix augmented TPC-DI lifecycle semantics

* Keep augmented tests dependency-free

* Configure Spark test JVM

* Fix augmented account batch schema

* Configure SF100 augmented insert sweep

* Add Databricks refresh policy benchmark flag

* Add Databricks policy sweep configs

* Document configurable Databricks refresh policy