@@ -13,7 +13,10 @@ lazy val root = (project in file("."))
       "org.apache.spark"  %% "spark-sql"    % sparkVersion,
       "io.delta"          %% "delta-spark"  % deltaVersion,
       "com.databricks"    %% "spark-xml"    % "0.18.0",
+      "org.scalatest"     %% "scalatest"    % "3.2.19" % Test,
     ),
+    Test / fork := true,
+    Test / javaOptions += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
     assembly / assemblyMergeStrategy := {
       case PathList("META-INF", "services", _*) => MergeStrategy.concat
       case PathList("META-INF", _*)             => MergeStrategy.discard
